# autose

./: .gitattributes  .gitignore  CNAME  README.md  autose.py  deepswe_failures.md  demo.css  demo.js  index.html  install.ps1  install.sh  main.js  pyproject.toml  research.html  robots.txt  sitemap.xml  start_gemma.sh  styles.css
.github/workflows/: release.yml
benchmarks/: autose_agent.py  tbench.py
code/core/: __init__.py  session.py  tui_bridge.py
code/core/clients/: __init__.py  headless.py
code/core/runners/: __init__.py  lite.py  standard.py
code/energy/: __init__.py  approximation.py  calibration.py  collectors.py  format.py  models.py  monitor.py  ollama_meta.py  platform_probe.py  tracker.py  tracking.py
code/logic/: classifier.py  main.py  prompts.json  tiers.py
code/logic/common/: agent.py  memory.py  tool.py  tools.py
code/logic/lite/: agent.py  main.py  tools.py
code/logic/standard/: main.py
code/tui/: display.py  lite_tui.py  session.py  standard_tui.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: doctor.mjs  stage-backend.mjs
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
docs/: ENERGY_MONITORING.md
docs/adr/: ADR-001-shared-core-first-class-cli-and-desktop.md  ADR-002-tauri-desktop-shell.md
profiles/: config.yaml
src/autose/: cli.py
tests/: test_energy_approximation.py  test_headless_client.py  test_main_args.py  test_runner_tool_wrappers.py  test_workspace_tools.py
(+11 files in other folders)
